--- a/lee_gradle/src/main/resources/application.Properties
+++ b/lee_gradle/src/main/resources/application.Properties
@@ -8,6 +8,10 @@ spring.datasource.username=testdb
 spring.datasource.password=testdb123
 
 #mybatis.type-aliases-package=lee.domain
-#mybatis.mapper-locations=mybatis/mapper/**/*.xml
+mybatis.mapper-locations=classpath:mybatis/mapper/**/*.xml
+
+
+#jsp direct apply
+server.jsp-servlet.init-parameters.development=true
 
 
