DB connection end

--- a/lee_gradle/bin/application.Properties
+++ b/lee_gradle/bin/application.Properties
@@ -8,7 +8,8 @@ spring.datasource.username=testdb
 spring.datasource.password=testdb123
 
 #mybatis.type-aliases-package=lee.domain
-mybatis.mapper-locations=classpath:mybatis/mapper/**/*.xml
+#mybatis.config-location=classpath:mybatis-config.xml
+mybatis.mapper-locations=classpath:mybatis/mapper/**.xml
 
 
 #jsp direct apply
