--- a/lee_gradle/build.gradle
+++ b/lee_gradle/build.gradle
@@ -7,13 +7,16 @@ targetCompatibility = 1.8
  
 version = '1.0'
  
-// 귀찮은 버전관리를 편하게 하기 위해서
+// 버전관리
 def version = [
 spring: '4.1.6.RELEASE',
 servletAPI: '3.1.0',
 commonsCollections: '3.2.1',
 junit: '4.12',
-slf4j: '1.7.12'
+slf4j: '1.7.12',
+spring_boot : '1.5.8.RELEASE',
+tomcat_embed : '8.5.20',
+mybatis : '1.1.1'
 ]
  
 eclipse {
@@ -39,19 +42,23 @@ repositories {
 }
  //http://kwon37xi.egloos.com/4747016
 dependencies {
-    // ${version.~}변수는 위에서 정의한 버전으로 사용됩니다.
-    providedCompile "javax.servlet:javax.servlet-api:${version.servletAPI}"
-    compile "org.springframework:spring-webmvc:${version.spring}"
-    compile("org.springframework.boot:spring-boot-starter-web:1.5.8.RELEASE")
-    compile "org.slf4j:slf4j-api:${version.slf4j}"
     compile group: 'commons-collections', name: 'commons-collections', version: "${version.commonsCollections}"
     testCompile group: 'junit', name: 'junit', version: "${version.junit}"
     
+    //${version.~}변수는 위에서 정의한 버전으로 사용됩니다.
+    //추가
+    providedCompile "javax.servlet:javax.servlet-api:${version.servletAPI}"
+    compile "org.springframework:spring-webmvc:${version.spring}"
+    compile "org.springframework.boot:spring-boot-starter-web:${version.spring_boot}"
+    compile "org.slf4j:slf4j-api:${version.slf4j}"
+    
+    /*내장 톰켓에서 jstl 인식하도록 추가*/
+    compile group: 'org.apache.tomcat.embed', name: 'tomcat-embed-jasper', version: '${version.tomcat_embed}'
 	compile('javax.servlet:jstl:1.2') /*jsp를 사용하기 위해 jstl 추가 */
-	/*내장 톰켓에서 jstl 인식하도록 추가*/
-	compile group: 'org.apache.tomcat.embed', name: 'tomcat-embed-jasper', version: '8.5.20'
+	
+	
 	// 읽기 http://dynaticy.tistory.com/10
-	compile('org.mybatis.spring.boot:mybatis-spring-boot-starter:1.1.1') // MyBatis 라이브러리
+	compile "org.mybatis.spring.boot:mybatis-spring-boot-starter:${version.mybatis}" // MyBatis 라이브러리
 	compile fileTree(dir: '/webapp/WEB-INF/lib', include: ['*.jar'])
 }
  
