--- a/lee_gradle/src/main/resources/application.Properties
+++ b/lee_gradle/src/main/resources/application.Properties
@@ -3,7 +3,7 @@ spring.mvc.view.suffix: .jsp
 
 #oracle set
 spring.datasource.driver-class-name= oracle.jdbc.driver.OracleDriver
-spring.datasource.url=jdbc:oracle:thin:@
+spring.datasource.url=jdbc:oracle:thin:
 spring.datasource.username= 
 spring.datasource.password=
 
