--- a/lee_gradle/src/main/resources/application.Properties
+++ b/lee_gradle/src/main/resources/application.Properties
@@ -9,7 +9,7 @@ spring.datasource.password=testdb123
 
 #mybatis.type-aliases-package=lee.domain
 #mybatis.config-location=classpath:mybatis-config.xml
-mybatis.mapper-locations=classpath:mybatis/mapper/**.xml
+mybatis.mapper-locations=classpath:mybatis/mapper/**/**.xml
 
 
 #jsp direct apply
