--- a/lee_gradle/build.gradle
+++ b/lee_gradle/build.gradle
@@ -61,6 +61,12 @@ dependencies {
 	compile fileTree(dir: '/webapp/WEB-INF/lib', include: ['*.jar'])
 	
 	compile "org.projectlombok:lombok:1.16.6"
+	
+	//fileupload 
+	compile group: 'commons-io', name: 'commons-io', version: '2.5'
+	compile group: 'commons-fileupload', name: 'commons-fileupload', version: '1.3.1'
+	 
+
 }
  
 [compileJava, compileTestJava]*.options*.encoding = 'UTF-8' // UTF 8 compile
