--- a/lee_gradle/src/main/resources/application.Properties
+++ b/lee_gradle/src/main/resources/application.Properties
@@ -5,9 +5,9 @@ spring.mvc.view.suffix: .jsp
 
 #oracle set
 spring.datasource.driver-class-name= oracle.jdbc.driver.OracleDriver
-spring.datasource.url=jdbc:oracle:thin:@1.245.161.197:1521:KTGDB
-spring.datasource.username=testdb
-spring.datasource.password=testdb123
+spring.datasource.url=jdbc:oracle:thin:
+spring.datasource.username=
+spring.datasource.password=
 
 #mybatis.type-aliases-package=lee.domain
 #mybatis.config-location=classpath:mybatis-config.xml
