--- a/lee_gradle/bin/application.Properties
+++ b/lee_gradle/bin/application.Properties
@@ -4,10 +4,12 @@ spring.mvc.view.prefix: /WEB-INF/views/
 spring.mvc.view.suffix: .jsp
 
 #oracle set
-spring.datasource.driver-class-name= oracle.jdbc.driver.OracleDriver
-spring.datasource.url=jdbc:oracle:thin:@
-spring.datasource.username=
-spring.datasource.password=
+spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
+#spring.datasource.driver-class-name= net.sf.log4jdbc.sql.jdbcapi.DriverSpy
+spring.datasource.url=jdbc:oracle:thin:@1.245.161.197:1521:KTGDB
+#:log4jdbc:
+spring.datasource.username=testdb
+spring.datasource.password=testdb123
 
 #mybatis.type-aliases-package=lee.domain
 #mybatis.config-location=classpath:mybatis-config.xml
@@ -21,4 +23,5 @@ spring.http.multipart.max-request-size=5000MB
 #multipart.maxFileSize=5MB 
 #multipart.maxRequestSize=50MB
 
-
+#debug: true
+logging.level.*=DEBUG
