--- a/lee_gradle/bin/application.Properties
+++ b/lee_gradle/bin/application.Properties
@@ -6,10 +6,10 @@ spring.mvc.view.suffix: .jsp
 #oracle set
 spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
 #spring.datasource.driver-class-name= net.sf.log4jdbc.sql.jdbcapi.DriverSpy
-spring.datasource.url=jdbc:oracle:thin:
+spring.datasource.url=jdbc:oracle:thin:@1.245.161.197:1521:KTGDB
 #:log4jdbc:
-spring.datasource.username=
-spring.datasource.password=
+spring.datasource.username=testdb
+spring.datasource.password=testdb123
 
 #mybatis.type-aliases-package=lee.domain
 #mybatis.config-location=classpath:mybatis-config.xml
